--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,10 +1,16 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: #f0f0f0;
-  display: flex;
+  /* display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: center; */
   height: 100vh;
-  margin: 0;
+  /* margin: 0; */
+  display: block !important;
 }
 
 .form-container {
@@ -14,15 +20,18 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
+h1 {
+  text-align: center;
+}
 
 .form-heading {
-  font-size: 1.5rem;
+  font-size: 20px;
   margin-bottom: 20px;
 }
 
 form {
   width: 300px;
-  margin: 0 auto;
+  margin: 40px auto;
   text-align: left;
 }
 
@@ -38,7 +47,7 @@ textarea {
   margin-bottom: 16px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  font-size: 1rem;
+  font-size: 15px;
 }
 
 button[type="submit"] {
@@ -49,12 +58,17 @@ button[type="submit"] {
   padding: 10px 20px;
   cursor: pointer;
   margin-left: 80px;
+  margin-top: 20px;
 }
 
 .error {
   color: #ff0000;
-  font-size: 0.8rem;
+  font-size: 15px;
   margin-top: 4px;
+  text-align: center;
+}
+.movielist {
+  padding: 100px;
 }
 
 .movie-list {
