--- a/app/src/App.css
+++ b/app/src/App.css
@@ -73,8 +73,7 @@ button[type="submit"] {
 
 .movie-list {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  padding: 10px;
   margin-top: 20px;
 }
 
