--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,121 +1,73 @@
-html {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  background: #24b99c !important;
-}
-
-body {
-  height: 100vh;
-  display: block !important;
-}
-
-.form-container {
-  background-color: #fff;
-  border-radius: 10px;
-  padding: 20px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+.mainDiv {
+  width: 500px;
+  margin: 20px auto;
   text-align: center;
 }
-.container {
-  max-width: 440px;
-  margin: 170px auto;
-  background: white;
-  border-radius: 10px;
+
+h1 {
+  color: dodgerblue;
 }
-.head {
+p {
+  color: blueviolet;
+}
+ul {
+  list-style: none;
   text-align: center;
-  background: #16a085;
-  margin: 0;
-  padding: 20px;
-  font-size: 40px !important;
-  color: white;
+  padding: 15px;
 }
-
-.form-heading {
-  font-size: 20px;
-  margin-bottom: 20px;
-}
-
-form {
-  width: 300px;
-  margin: 40px auto;
-  text-align: left;
-}
-
-label {
-  display: block;
-  margin-bottom: 8px;
-}
-
-input,
-textarea {
-  width: 100%;
-  padding: 10px;
-  margin-bottom: 16px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  font-size: 15px;
-}
-
-button[type="submit"] {
-  background: #16a085;
-  color: #fff;
-  border: none;
-  border-radius: 4px;
-  padding: 10px 20px;
-  cursor: pointer;
-  margin-left: 80px;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-
-.error {
-  color: #ff0000;
-  font-size: 15px;
-  margin-top: 4px;
-  text-align: center;
-}
-.movielist {
-  padding: 100px;
-}
-
-.movie-list {
-  display: flex;
-  padding: 10px;
-  margin-top: 20px;
-  flex-wrap: wrap;
-}
-
-.movie-card {
-  width: 200px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border-radius: 10px;
-  padding: 20px;
-  margin-bottom: 20px;
-  text-align: center;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  margin: 10px;
-}
-h2 {
-  color: white;
-  text-align: center;
-}
-.movie-card h1 {
-  font-size: 25px;
-  margin-bottom: 10px;
-}
-
-.movie-card h3 {
-  font-size: 20px;
-  color: #007bff;
-}
-
-.movie-card img {
-  width: 100px;
-  height: 100px;
-  object-fit: cover;
-  border-radius: 30%;
+li {
+  border: 1px solid grey;
+  padding: 30px;
   margin-top: 10px;
+  border-radius: 5px;
+}
+.addbtn {
+  margin-left: 25px;
+  margin-top: 25px;
+  background: cornflowerblue;
+  padding: 10px 50px;
+  color: white;
+  border: none;
+  border-radius: 7px;
+}
+span {
+  color: rgb(99 19 19);
+}
+.Addinput {
+  width: 300px;
+  line-height: 34px;
+  border-color: blue;
+  border-radius: 7px;
+}
+::placeholder {
+  color: black;
+  text-align: center;
+}
+.edit-btn {
+  padding: 6px 22px;
+  background-color: dodgerblue;
+  border: none;
+  color: white;
+  border-radius: 4px;
+}
+.del-btn {
+  padding: 6px 22px;
+  margin-left: 4px;
+  background-color: dodgerblue;
+  border: none;
+  color: white;
+}
+.update-btn {
+  padding: 6px 22px;
+  margin-left: 4px;
+  background-color: dodgerblue;
+  border: none;
+  color: white;
+}
+.cancel-btn {
+  padding: 6px 22px;
+  margin-left: 4px;
+  background-color: dodgerblue;
+  border: none;
+  color: white;
 }
