--- a/app/src/App.css
+++ b/app/src/App.css
@@ -29,6 +29,7 @@ li {
   color: white;
   border: none;
   border-radius: 7px;
+  cursor: pointer;
 }
 span {
   color: rgb(99 19 19);
@@ -49,6 +50,7 @@ span {
   border: none;
   color: white;
   border-radius: 4px;
+  cursor: pointer;
 }
 .del-btn {
   padding: 6px 22px;
@@ -56,6 +58,8 @@ span {
   background-color: dodgerblue;
   border: none;
   color: white;
+  border-radius: 4px;
+  cursor: pointer;
 }
 .update-btn {
   padding: 6px 22px;
@@ -63,6 +67,8 @@ span {
   background-color: dodgerblue;
   border: none;
   color: white;
+  border-radius: 4px;
+  cursor: pointer;
 }
 .cancel-btn {
   padding: 6px 22px;
@@ -70,4 +76,6 @@ span {
   background-color: dodgerblue;
   border: none;
   color: white;
+  border-radius: 4px;
+  cursor: pointer;
 }
