--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,4 +1,4 @@
-.mainDiv {
+/* .mainDiv {
   width: 500px;
   margin: 20px auto;
   text-align: center;
@@ -78,4 +78,4 @@ span {
   color: white;
   border-radius: 4px;
   cursor: pointer;
-}
+} */
