--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,15 +1,247 @@
-:root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
+body {
+  font-family: sans-serif;
+}
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: white;
+h1 {
+  text-align: center;
+  color: #00a793;
+}
+.tweet-list {
+  color: #00a793;
+}
+.navbar {
+  padding: 10px 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row-reverse;
+  border-bottom: 1px solid #00a793;
+}
+.home-btn,
+.addform-btn {
+  color: #00a793;
+  border: none;
+  margin: 10px;
+  font-size: 18px;
+  cursor: pointer;
+  background: none;
+  font-weight: 600;
+}
+.home-btn:after,
+.addform-btn:after {
+  display: block;
+  content: "";
+  border-bottom: solid 3px #00a793;
+  transform: scaleX(0);
+  transition: transform 250ms ease-in-out;
+}
+.home-btn:hover:after,
+.addform-btn:hover:after {
+  transform: scaleX(1);
+}
+.link {
+  display: flex;
+  align-items: center;
+  justify-content: end;
+}
+a {
+  text-decoration: none;
+  margin: 10px;
+  color: white;
+}
+.search {
+  text-align: center;
+  margin: 26px;
+}
+.search input {
+  border-radius: 6px;
+  border: 1px solid gainsboro;
+  width: 40%;
+  height: 40px;
+}
+.search input:focus {
+  border-color: #00a793;
+  box-shadow: 0 0 10px #00a793;
+  outline: none;
+}
+.search input::placeholder {
+  font-size: 14px;
+  color: black;
+  text-align: center;
+}
+.Search-btn {
+  background: #00a793;
+  color: white;
+  border: none;
+  padding: 8px 20px;
+  border-radius: 10px;
+  margin: 0 8px;
+}
+.tweet-parent {
+  background-color: #f5f2f2;
+  height: 700px;
+  position: relative;
+}
+.tweet-container {
+  padding: 110px;
+  margin-top: 50px;
+  /* background-color: rgba(247, 247, 249, 1); */
+  border-radius: 20px;
+  background: url(https://www.mediwavedigital.com/_next/static/media/oruworks.e62439ad.svg);
+  background-repeat: no-repeat;
+  background-position: left 110px top 72px;
+  position: absolute;
+  top: 100px;
+}
+.tweet-records {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.card:nth-child(even) {
+  border-left: 14px solid #e50064;
+}
+.card {
+  /* padding: 15px; */
+  margin: 25px;
+  border-radius: 10px;
+  background: white;
+  width: 300px !important;
+  border-left: 14px solid #00a793;
+  /* background-color: rgba(247, 247, 249, 1); */
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
+    0 4px 6px -4px rgba(0, 0, 0, 0.1);
+}
+.card p {
+  padding: 15px 30px;
+  font-size: 18px;
+  font-weight: 300;
+}
+.emoji-head {
+  padding: 4px 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-top: 1px solid #00a793;
+}
+.emoji span {
+  display: inline-block;
+}
+.like {
+  border: 1px solid #00a793;
+  border-radius: 5px;
+  padding: 2px;
+}
+.date {
+  font-size: 12px;
+}
+::selection {
+  background: rgba(26, 188, 156, 0.3);
+}
+.container {
+  max-width: 440px;
+  padding: 0 20px;
+  margin: 170px auto;
+}
+.wrapper {
+  width: 100%;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
+}
+.wrapper .title {
+  height: 90px;
+  background: #16a085;
+  border-radius: 5px 5px 0 0;
+  color: #fff;
+  font-size: 30px;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.wrapper form {
+  padding: 30px 25px 25px 25px;
+}
+.wrapper form .row {
+  height: 45px;
+  margin-bottom: 15px;
+  position: relative;
+}
+.row input {
+  margin: 2px auto;
+  width: 100%;
+  height: 100%;
+  border: 1px solid darkgrey;
+  border-radius: 6px;
+}
+form .row input::placeholder {
+  color: #999;
+  text-align: center;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.form-add {
+  width: 50px;
+  margin: 10px auto;
+}
+.back {
+  margin-top: 25px;
+  border: 1px solid #00a793;
+  padding: 4px 8px;
+  border-radius: 4px;
+  background: white;
+}
+.back a {
+  color: #00a793;
+}
+.submit-btn {
+  background: #16a085;
+  border: none;
+  padding: 10px 24px;
+  border-radius: 5px;
+}
+@media only screen and (max-width: 992px) {
+  .tweet-records {
+    display: block;
+  }
+  .card {
+    margin: 25px auto;
+    width: 400px !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .tweet-container {
+    background: none;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .tweet-records {
+    display: block;
+    margin: 7px auto;
+    width: 50px;
+  }
+  .card {
+    margin: 25px auto;
+    width: 300px !important;
+  }
+  .tweet-container {
+    padding: 0px;
+    margin-top: 140px;
+    background: none;
+  }
+  .navbar {
+    padding: 0;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .tweet-records {
+    display: block;
+  }
+  .card {
+    margin: 25px auto;
+    width: 215px !important;
+  }
+  .Search-btn {
+    margin-top: 12px;
+  }
 }
