--- a/app/src/index.css
+++ b/app/src/index.css
@@ -14,7 +14,6 @@ h1 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  flex-direction: row-reverse;
   border-bottom: 1px solid #00a793;
 }
 .home-btn,
@@ -68,9 +67,8 @@ a {
 .search input::placeholder {
   font-size: 14px;
   color: black;
-  text-align: center;
 }
-.Search-btn {
+.search-btn {
   background: #00a793;
   color: white;
   border: none;
@@ -79,26 +77,23 @@ a {
   margin: 0 8px;
   cursor: pointer;
 }
-.tweet-parent {
-  background-color: #f5f2f2;
-  height: 1000px;
-  position: relative;
-}
 .tweet-container {
   padding: 110px;
   margin-top: 100px;
-  /* background-color: rgba(247, 247, 249, 1); */
+  background-color: rgba(247, 247, 249, 1);
   border-radius: 20px;
-  background: url(https://www.mediwavedigital.com/_next/static/media/oruworks.e62439ad.svg);
+  background-image: url(https://www.mediwavedigital.com/_next/static/media/oruworks.e62439ad.svg);
   background-repeat: no-repeat;
   background-position: left 110px top 72px;
-  position: absolute;
-  top: 100px;
+  /* position: absolute;
+  top: 100px; */
 }
 .tweet-records {
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-between; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
 }
 .card:nth-child(even) {
   border-left: 14px solid #e50064;
@@ -108,20 +103,21 @@ a {
   margin: 25px;
   border-radius: 10px;
   background: white;
-  width: 300px !important;
+  /* width: 300px !important; */
   border-left: 14px solid #00a793;
   /* background-color: rgba(247, 247, 249, 1); */
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -4px rgba(0, 0, 0, 0.1);
 }
-.tweet-para {
+/* .tweet-para {
   width: 100%;
-}
+} */
 .tweet-para p {
   padding: 15px 30px;
   font-size: 18px;
   font-weight: 300;
-  width: 200px !important;
+  /* width: 200px !important; */
+  overflow-wrap: break-word;
 }
 .emoji-head {
   padding: 4px 10px;
@@ -136,6 +132,7 @@ a {
 .emoji button {
   background: none;
   border: none;
+  cursor: pointer;
 }
 .like {
   border: 1px solid #00a793 !important;
@@ -189,7 +186,6 @@ a {
 }
 form .row input::placeholder {
   color: black;
-  text-align: center;
 }
 
 .form-add {
@@ -199,15 +195,12 @@ form .row input::placeholder {
 .error {
   color: red;
 }
-.back {
-  margin-top: 25px;
-  border: 1px solid #00a793;
-  padding: 4px 8px;
-  border-radius: 4px;
-  background: white;
+.input-note {
+  font-size: 14px;
+  color: grey;
 }
-.back a {
-  color: #00a793;
+.note-para {
+  font-size: 12px;
 }
 .submit-btn {
   background: #16a085;
@@ -219,39 +212,39 @@ form .row input::placeholder {
 }
 @media only screen and (max-width: 992px) {
   .tweet-records {
-    display: block;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
   }
   .card {
     margin: 25px auto;
-    width: 400px !important;
   }
 }
 @media only screen and (max-width: 768px) {
   .tweet-container {
-    background: none;
+    background-color: rgba(247, 247, 249, 1);
     padding: 60px;
   }
   .search input {
     width: 80%;
   }
-  .Search-btn {
+  .search-btn {
     margin-top: 15px;
   }
 }
 @media only screen and (max-width: 600px) {
   .tweet-records {
-    display: block;
+    display: grid;
     margin: 7px auto;
-    width: 50px;
+    grid-template-columns: 1fr;
   }
   .card {
     margin: 25px auto;
-    width: 300px !important;
+    width: 95%;
   }
   .tweet-container {
     padding: 0px;
     margin-top: 140px;
-    background: none;
+    background-color: rgba(247, 247, 249, 1);
   }
   .navbar {
     padding: 0;
@@ -263,9 +256,14 @@ form .row input::placeholder {
   }
   .card {
     margin: 25px auto;
-    width: 215px !important;
   }
-  .Search-btn {
+  .search-btn {
     margin-top: 12px;
+  }
+  .navbar {
+    display: block;
+  }
+  .link {
+    justify-content: center;
   }
 }
