--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,7 +1,6 @@
 body {
   font-family: sans-serif;
 }
-
 h1 {
   text-align: center;
   color: #00a793;
@@ -15,6 +14,13 @@ h1 {
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #00a793;
+}
+@media (max-width: 580px) {
+  .navbar {
+    padding: 10px 20px;
+    flex-direction: column;
+    border-bottom: 1px solid #00a793;
+  }
 }
 .home-btn,
 .addform-btn {
@@ -49,14 +55,31 @@ h1 {
   color: white;
 }
 .search {
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   margin: 26px;
+}
+@media (max-width: 550px) {
+  .search {
+    flex-direction: column;
+  }
 }
 .search input {
   border-radius: 6px;
   border: 1px solid gainsboro;
   width: 40%;
   height: 40px;
+}
+@media (max-width: 550px) {
+  .search input {
+    width: 60%;
+  }
+}
+@media (max-width: 440px) {
+  .search input {
+    width: 80%;
+  }
 }
 .search input:focus,
 .row input:focus {
@@ -69,6 +92,7 @@ h1 {
   color: black;
 }
 .search-btn {
+  height: 30px;
   background: #00a793;
   color: white;
   border: none;
@@ -77,9 +101,13 @@ h1 {
   margin: 0 8px;
   cursor: pointer;
 }
+@media (max-width: 550px) {
+  .search-btn {
+    margin: 8px 0px;
+  }
+}
 .tweet-container {
   padding: 110px;
-  margin-top: 100px;
   background-color: rgba(247, 247, 249, 1);
   border-radius: 20px;
   background-image: url(https://www.mediwavedigital.com/_next/static/media/oruworks.e62439ad.svg);
@@ -88,38 +116,55 @@ h1 {
   /* position: absolute;
   top: 100px; */
 }
+@media (max-width: 1000px) {
+  .tweet-container {
+    padding: 50px;
+  }
+}
+@media (max-width: 550px) {
+  .tweet-container {
+    padding: 20px;
+  }
+}
 .tweet-records {
-  /* display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between; */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  gap: 25px;
+}
+@media (max-width: 1300px) {
+  .tweet-records {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 750px) {
+  .tweet-records {
+    grid-template-columns: 1fr;
+  }
 }
 .card:nth-child(even) {
   border-left: 14px solid #e50064;
 }
 .card {
-  /* padding: 15px; */
-  margin: 25px;
+  position: relative;
   border-radius: 10px;
   background: white;
-  /* width: 300px !important; */
   border-left: 14px solid #00a793;
-  /* background-color: rgba(247, 247, 249, 1); */
   box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
     0 4px 6px -4px rgba(0, 0, 0, 0.1);
 }
-/* .tweet-para {
+.card-bottom {
   width: 100%;
-} */
+}
 .tweet-para p {
   padding: 15px 30px;
   font-size: 18px;
   font-weight: 300;
-  /* width: 200px !important; */
   overflow-wrap: break-word;
 }
 .emoji-head {
+  position: absolute;
+  bottom: 0;
+  width: 93%;
   padding: 4px 10px;
   display: flex;
   justify-content: space-between;
@@ -187,7 +232,6 @@ h1 {
 form .row input::placeholder {
   color: black;
 }
-
 .form-add {
   width: 50px;
   margin: 10px auto;
@@ -225,78 +269,22 @@ form .row input::placeholder {
   margin: 8px;
   border-radius: 5px;
   border: 1px solid #00a793;
-  color: red;
+  color: #00a793;
   cursor: pointer;
 }
 
 .navigationButtons a:hover {
   color: white;
-  background-color: red;
+  background-color: #00a793;
 }
 
 .navigationActive a {
-  color: white;
-  background-color: red;
+  color: black;
+  background-color: #00a793;
 }
 
 .navigationDisabled a {
   color: grey;
-  background-color: grey;
-}
-@media only screen and (max-width: 992px) {
-  .tweet-records {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-  }
-  .card {
-    margin: 25px auto;
-  }
-}
-@media only screen and (max-width: 768px) {
-  .tweet-container {
-    background-color: rgba(247, 247, 249, 1);
-    padding: 60px;
-  }
-  .search input {
-    width: 80%;
-  }
-  .search-btn {
-    margin-top: 15px;
-  }
-}
-@media only screen and (max-width: 600px) {
-  .tweet-records {
-    display: grid;
-    margin: 7px auto;
-    grid-template-columns: 1fr;
-  }
-  .card {
-    margin: 25px auto;
-    width: 95%;
-  }
-  .tweet-container {
-    padding: 0px;
-    margin-top: 140px;
-    background-color: rgba(247, 247, 249, 1);
-  }
-  .navbar {
-    padding: 0;
-  }
-}
-@media only screen and (max-width: 400px) {
-  .tweet-records {
-    display: block;
-  }
-  .card {
-    margin: 25px auto;
-  }
-  .search-btn {
-    margin-top: 12px;
-  }
-  .navbar {
-    display: block;
-  }
-  .link {
-    justify-content: center;
-  }
+  border: 1px solid grey;
+  cursor: not-allowed;
 }
